Replace handleTransportError body by one single method for all the channels